# NSW-dataset-tools

./: .gitignore
dataset_msgs/: CMakeLists.txt  package.xml
dataset_playback/: CMakeLists.txt  package.xml
dataset_playback/include/dataset_playback/: dataset_panel.h
dataset_playback/src/: dataset_panel.cpp
dataset_tools/: CMakeLists.txt
gmsl_frame_msg/: CMakeLists.txt
gmsl_frame_msg/include/gmsl_frame_msg/: blank.hpp
mp4_bag_playback/: CMakeLists.txt  README.md  nodelet_definition.xml  package.xml
mp4_bag_playback/config/: metadata.json
mp4_bag_playback/include/h264_bag_playback/: bag_static_transform_publisher.hpp  h264_bag_playback.hpp
mp4_bag_playback/include/mp4_bag_playback/: corrected_imu_playback.hpp  helper_functions.hpp  mp4_bag_playback.hpp  replace_msg.h
mp4_bag_playback/launch/: h264_playback.launch  nodelet_test.launch  replaceMsg_writeToBag.launch
mp4_bag_playback/scripts/: convert_folder.sh  convert_multiple_folders.sh
mp4_bag_playback/src/: mp4_bag_playback.cpp  replace_msg.cpp
mp4_bag_playback/test/: test_playback.cpp
python_tools/: README.md  main_mp4.py  main_write_rosbag.py  video_rectify.py
